--- a/auth38.cabal
+++ b/auth38.cabal
@@ -15,8 +15,11 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Yesod.Auth.Mythic
   build-depends:       base >= 4.7 && < 5
+                     , yesod-auth
+                     , yesod-core
+                     , yesod-form
   default-language:    Haskell2010
 
 executable auth38
